src/test/deca/context/invalid/expr_cast_float_to_Object.deca
// Test of the rule (3.39) : can't cast float to Object.

{
	Object var1;
	float var2;
	var1 = (Object)(var2);
}

// Résultat :
//# a
